# spimex-parser-comparison

./: .env  .env_example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app_async/: main.py
app_async/db/: database.py  models.py  repository.py  save_data.py
app_async/parser/: download_files.py  get_links.py  scrapping.py
app_async/utils/: extract_xml.py
app_sync/: config.py  main.py
app_sync/db/: database.py  repository.py  save_data.py
app_sync/parser/: download_files.py  get_links.py  scrapping.py
app_sync/utils/: extract_xml.py
