[tool.poetry]
name = "1"
version = "0.1.0"
description = ""
authors = ["BotArchitect1 <pavliksha@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.3"
python-dotenv = "^1.0.1"
black = "^24.4.2"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.9.5"
asyncpg = "^0.29.0"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
